--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ toggle:focus {
     position: relative;
     width: 200px;
     height: 200px;
-    background-color: #f0f0f0;
+    background-color: #f0f0f08a;
 }
 
 .needle {
@@ -70,6 +70,7 @@ toggle:focus {
     height: 65px;
     width: 3px;
     transform-origin: bottom center;
+    transition: all 0.5s ease-in;
 }
 
 
